welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:12: error: type mismatch;
 found   : Unit
 required: Int
    if (speed > 80)
    ^caughtSpeeding:27: error: type mismatch;
 found   : Unit
 required: Int
    if (speed >85)
    ^